--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "libs/clap-juce-extensions"]
 	path = libs/clap-juce-extensions
 	url = https://github.com/free-audio/clap-juce-extensions
+[submodule "onesynth-server"]
+	path = onesynth-server
+	url = https://github.com/OTRAY271/onesynth-server
